--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="y4 new">4</span>
         <img class="balloon" src="parachute.png"/>
     </div>
-    <div class="msg msgFrom">Niraj</div>
+    <div class="msg msgFrom">BY Niraj❤️</div>
     <div class="firework" id="firework1">
         <div class="cracker"></div>
         <div class="cracker"></div>
